# requ

./: .gitignore  API_KEYS_GUIDE.md  AUTHENTICATION_IMPLEMENTATION.md  CHAT_FEATURES_ADDED.md  COMPREHENSIVE_BUG_REPORT.md  DATA_GOV_API_SETUP.md  FINAL_AUDIT_REPORT.md  FINAL_STATUS.md  FIXES_APPLIED.md  GITHUB_READY_STATUS.md  PRE_GITHUB_FIXES.md  QUICKSTART.md  README.md  datasetguide.md  implementation.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  start.bat  supabase.md  tsconfig.tsbuildinfo  updateslist.md  vercel.json
api/: index.py
ml-backend/: .env.example  config.py  fertilizer_service.py  llm_service.py  main.py  market_service.py  notification_service.py  pest_service.py  requirements-minimal.txt  requirements.txt  rotation_service.py  satellite_service.py  services.py  soil_service.py  test_apis.py  train_model.py  twilio_ivr.py  yield_service.py
src/app/: awwwards.css  globals.css  layout.tsx  page.tsx  providers.tsx
src/app/advisor/: page.tsx
src/app/climate-map/: page.tsx
src/app/data-deletion/: page.tsx
src/components/: AdvisorSection.tsx  AgriBackground.tsx  ArchitectureSection.tsx  CinematicAgriBg.tsx  CinematicBg.tsx  ClayBackground.tsx  ConsoleVideoBg.tsx  ContractsSection.tsx  EligibilitySection.tsx  Footer.tsx  GlassmorphismBg.tsx  HeroSection.tsx  LenisProvider.tsx  MarketSection.tsx  ModulePanel.tsx  ModulesSection.tsx  Navbar.tsx  ProtectedRoute.tsx  SchemesSection.tsx  StatTicker.tsx  StorySection.tsx  ThreeCanvas.tsx  VideoBg.tsx
src/context/: AuthContext.tsx
src/lib/: api.ts  supabase.ts
(+4 files in other folders)
